--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MVVM Template</string>
+    <string name="app_name">UsersMVVM</string>
     <string name="list_is_empty">List is empty</string>
     <string name="name">Name</string>
     <string name="email">Email</string>
